Replacement fee too low fix and UI changes

--- a/review-ui/src/style/AppStyle.css
+++ b/review-ui/src/style/AppStyle.css
@@ -11,6 +11,7 @@
 .sbt-img {
   max-width: 136px;
   max-height: 136px;
+  padding-left: 5px;
 }
 
 /* 
